2003-08-30  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: add set_output_lib call.

	* extconf.rb: fix to allow building in a foreign directory.

2003-08-28  Masao Mutoh  <mutoh@highway.ne.jp>
                                                                                
   * extconf.rb: Exit with 1 when the package is not found.

2003-08-21  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* rbpangofontdescription.c: new method Pango::FontDescription#to_s
	(alias to Pango::FontDescription#to_str).

	* src/*.c: define enum/flags classes.

2003-08-17  Vincent Isambart <vincent.isambart@laposte.net>

	* src/rbpangofont.c: Pango::Font#metrics accept no parameter.
	
2003-08-16  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/rbpangolanguage.c: implement Pango::Language#to_s

	* src/rbpangolanguage.c (language_to_str): use
	pango_language_to_string()

	* src/rbpangofontmap.c: implment Pango::FontMap#list_families

	* src/rbpangofontfamily.c: implement Pango::FontFamily#list_faces

	* src/pango/rbpangocontext.c: implement Pango::Context#list_families

	* src/pango/rbpangofont.c: fix Pango::Font.metrics

2003-08-15  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/*: use G_DEF_CONSTANTS() for defining enum/flags constants.

2003-05-27  Masao Mutoh  <mutoh@highway.ne.jp>

   * extconf.rb: Follow mkmf-gnome2.rb position changes.

2003-04-05  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangoattribute.c:  Move Pango::Attribute::UNDERLINE_... 
	to Pango::AttrUnderline::...
	Move Pango::Attribute::SCALE_... to Pango::AttrScale::...
	* sample/attribute.rb: Move Pango::Attribute::UNDERLINE_... 
	to Pango::AttrUnderline::...

2003-03-19  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* src/pango.def: Add a file

2003-03-08  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbpangomain.c: Add Pango.pixels 

2003-03-07  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>

	* extconf.rb: append "-DRUBY_PANGO_COMPILATION" to $defs.